[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/end_scene/EndScene.gd" type="Script" id=1]
[ext_resource path="res://themes/theme.tres" type="Theme" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/hyperlegible/AtkinsonHyperlegible-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = SubResource( 1 )

[node name="EndScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.25098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -140.0
margin_right = 152.0
margin_bottom = 140.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReasonLabel" type="Label" parent="Popup"]
margin_top = 10.0
margin_right = 304.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 2 )
text = "Reason"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionLabel" type="Label" parent="Popup"]
margin_left = 10.0
margin_top = 51.0
margin_right = 291.0
margin_bottom = 210.0
text = "Description"
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="Popup"]
margin_left = 15.0
margin_top = 219.0
margin_right = 291.0
margin_bottom = 265.0
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}
